2009-08-06  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.9.10.
	* build.xml (version.release): Likewise.

2009-06-02  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm): Add unicode.scm.

2009-05-31  Per Bothner  <per@bothner.com>

	* build.scm: Update to also compile regex.scm and pregexp.scm.

2009-05-17  Per Bothner  <per@bothner.com>

	* Makefile.am (dist-kawa-@VERSION@.jar): Make copy of dist sources,
	to allow re-condifure, even when "$srcdir" is ".".
	Build with Java6 compiler, with target 5, and --with-javax.script,
	to allowing running under Java5, but with scripting on Java6.

	* configure.in (--with-java.script): New flag.
	(WITH_JAVAX_SCRIPT): New conditional.
	* Makefile.am: Add META-INF/services/javax.script.ScriptEngineFactory
	to kawa jar file when WITH_JAVAX_SCRIPT is selected.

2009-03-16  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm, slib-scm: Update for new modules.
	(slib-scm-classes): Use fileset slib-scm rather than slib-scm-list.
	(slib-scm-list): Remove duplicate filelist.

2009-01-14  Per Bothner  <per@bothner.com>

	* configure.in: Add configure switches-enanle-xquery.
	Add conditionals ENABLE_XQUERY and WITH_ANDROID.
	* Makefile.am (SUBDIRS): Make use of new conditonals.

2008-12-23  Per Bothner  <per@bothner.com>

	* configure.in: New --with-android option.
	* Makefile.am: Add "android" as new JAVA_SOURCE version.
	(set-selected-java-source): Fix minor problem which causes error
	message selected-java-source is missing.

2008-11-19  Per Bothner  <per@bothner.com>

	* configure.in: Use AC_CHECK_TOOL to find GCJ, rather than
	LT_AC_PROG_GCJ, since the latter seems to be gone now.

2008-01-26  Per Bothner  <per@bothner.com>

	* configure.in: The default for --with-java-source is now 5.
	* Makefile.am: The default binary builds now require Java 5.

2007-11-01  Per Bothner  <per@bothner.com>

	* build.xml (run): Set fork to true, since otherwise we can't