@@ -39,8 +39,12 @@ META_INF_FILES = META-INF/services/javax.script.ScriptEngineFactory
 endif
 
 kawa-@VERSION@.jar: ./kawa-jar.stamp $(META_INF_FILES)
-	$(JAR) cmf $(srcdir)/jar-manifest kawa-@VERSION@.jar $(META_INF_FILES)\
-	    `find gnu -name '*.class' -print` `find kawa -name '*.class' -print`
+	$(JAR) cmf $(srcdir)/jar-manifest $@ $(META_INF_FILES)\
+	    `find gnu kawa -name '*.class' -print`
+
+kawart-@VERSION@.jar: ./kawa-jar.stamp classes-to-skip-for-runtime
+	$(JAR) cf $@ \
+	  `find gnu kawa -name '*.class' -print | grep -v -f classes-to-skip-for-runtime`
 
 META-INF/services/javax.script.ScriptEngineFactory: Makefile
 	echo 'kawa.standard.SchemeScriptEngineFactory #Scheme' >tmp.ScriptEngineFactory
@@ -103,7 +107,7 @@ EXTRA_DIST = debian/control debian/rules debian/changelog debian/dirs \
   patch-source-list selected-java-source \
   build.xml build.properties \
   gnu/jemacs/jar-manifest gnu/jemacs/status.html \
-  kawa/Version.java jar-manifest Make-rules
+  kawa/Version.java jar-manifest Make-rules classes-to-skip-for-runtime
 
 MOSTLYCLEANFILES = tmp *.o kawa1$(exeext) *.stamp
 CLEANFILES = *.jar kawa/Version.java
