@@ -1,0 +1,59 @@
+gnu/expr/BindingInitializer.class
+gnu/expr/CheckedTarget.class
+gnu/expr/ClassExp*.class
+gnu/expr/FindCapturedVars.class
+gnu/expr/Initializer.class
+gnu/expr/ObjectExp.class
+gnu/expr/ResolveNames.class
+gnu/expr/TryExp.class
+kawa/TelnetRepl.class
+kawa/TelnetOutputStream.class
+kawa/repl.class
+kawa/Shell.class
+kawa/lang/AnyPat.class
+kawa/lang/EqualPat.class
+kawa/lang/Lambda.class
+kawa/lang/ListPat.class
+kawa/lang/ListRepeatPat.class
+kawa/lang/PairPat.class
+kawa/lang/Pattern.class
+kawa/lang/Quote.class
+kawa/lang/CompileFile.class
+kawa/lang/PatternScope.class
+kawa/lang/Syntax.class
+kawa/lang/SyntaxForm.class
+kawa/lang/SyntaxPattern.class
+kawa/lang/SyntaxRule.class
+kawa/lang/SyntaxRules.clas
+skawa/lang/SyntaxTemplate.class
+kawa/lang/TemplateScope.class
+kawa/lang/VarListPat.class
+kawa/standard/define_alias.class
+kawa/standard/define_autoload.class
+kawa/standard/define.class
+kawa/standard/define_class.class
+kawa/standard/define_member_alias.class
+kawa/standard/define_syntax.class
+kawa/standard/define_unit.class
+kawa/standard/define_variable.class
+kawa/standard/export.class
+kawa/standard/fluid_let.class
+kawa/standard/IfFeature.class
+kawa/standard/let.class
+kawa/standard/let_syntax.class
+kawa/standard/module_compile_options.class
+kawa/standard/module_extends.class
+kawa/standard/module_implements.class
+kawa/standard/module_name.class
+kawa/standard/module_static.class
+kawa/standard/object.class
+kawa/standard/SchemeCompilation.class
+kawa/standard/set_b.class
+kawa/standard/syntax.class
+kawa/standard/syntax_case.class
+kawa/standard/syntax_case_work.class
+kawa/standard/syntax_error.class
+kawa/standard/syntax_rules.class
+kawa/standard/try_catch.class
+kawa/standard/thisRef.class
+kawa/standard/with_compile_options.class
