@@ -1,3 +1,8 @@
+2009-08-10  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (KAWARTLIB): New variable.
+	(check-scribble): Use $(KAWARTLIB).
+
 2009-08-07  Per Bothner  <per@bothner.com>
 	    Chuah Teong Leong
 
